<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_screen" >

    <RelativeLayout
        android:id="@+id/header"
        style="@style/header_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="10dp">

        <ImageView
            android:id="@+id/img_logo"
            style="@style/header_images_style_left"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:src="@drawable/exit_logo"
            android:visibility="visible" />

        <TextView
            android:id="@+id/textView1"
            style="@style/header_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/header_txt"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_below="@+id/textView1"
            style="@style/cust_text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textSize="15sp"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <ImageView
            android:id="@+id/imageView2"
            style="@style/header_images_style_right"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@null"
            android:visibility="visible" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/container"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/header"
        android:layout_above="@id/footer"
        android:background="@drawable/background_screen" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="25dp"
                android:text="@string/ip_settings"
                android:textColor="@color/text_color"
                android:textSize="35sp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal"
                android:weightSum="1"
                android:id="@+id/rg_live_test">

                <RadioButton
                    android:id="@+id/live"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="true"
                    android:paddingLeft="10dp"
                    android:text="OPEN NETWORK"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"/>

                <RadioButton
                    android:id="@+id/test"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:paddingLeft="10dp"
                    android:text="LOCAL NETWORK"
                    android:textColor="@color/text_color"
                    android:textSize="20sp"/>
            </RadioGroup>

            <EditText
                android:id="@+id/et_serverUrl"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/edittextstyle"
                android:hint="@string/server_url_hint"
                android:text=""
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="20sp" >
            </EditText>

            <EditText
                android:id="@+id/et_ftp_url"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="35dp"
                android:background="@drawable/edittextstyle"
                android:hint="Enter FTP URL"
                android:inputType="text"
                android:text="192.168.11.9:99"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:singleLine="true"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:visibility="visible" >
            </EditText>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                android:weightSum="1" >

                <Button
                    android:id="@+id/cancel"
                    style="@style/naviblue_custom_style"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_weight="0.5"
                    android:text="@string/cancel"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/save"
                    style="@style/naviblue_custom_style"
                    android:layout_width="fill_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_weight="0.5"
                    android:text="@string/save"
                    android:textColor="#ffffff"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/footer"
        layout="@layout/footer_layout" />

</RelativeLayout>